Release 1.3.2 for Minecraft 1.20.4