@@ -171,7 +171,7 @@ final class ConfigValidatorTest {
         ConfigValidationReport report = validate(config);
 
         assertEquals(ConfigValidator.MAX_RETAINED_ISSUES, report.issues().size());
-        assertEquals(ValidationSeverity.ERROR, report.issues().getFirst().severity());
+        assertEquals(ValidationSeverity.ERROR, report.issues().get(0).severity());
         assertCode(report, ValidationCode.INVALID_ENTITY_TARGET, ValidationSeverity.ERROR);
         assertTrue(report.omittedIssueCount() > 0);
     }
